Undo changes to allow for jep-334 dependency